# geekbang-rust

./: .gitignore  README.md
con_utils/src/: channel.rs
demo/examples/: lifetime.rs
httpie/: Cargo.toml
httpie/src/: main.rs
kv/: Cargo.toml
kv-3/: Cargo.toml  abi.proto
kv-3/src/: error.rs
kv-3/src/pb/: mod.rs
kv-3/src/service/: mod.rs
kv-3/src/storage/: mod.rs  sleddb.rs
kv-5/: Cargo.toml
kv-5/examples/: service_with_codec.rs  service_with_sled.rs
kv-5/fixtures/: ca.cert
kv-5/src/: error.rs
kv-5/src/network/: frame.rs  mod.rs  tls.rs
kv-5/src/service/: command_service.rs
kv-6/: Cargo.toml
kv-6/examples/: service.rs
kv-6/fixtures/: client.cert  server.cert  server.key
kv-6/src/: client.rs  server.rs
kv-6/src/network/: mod.rs  stream.rs  tls.rs
kv-6/src/pb/: abi.rs  mod.rs
kv-6/src/service/: mod.rs
kv-6/src/storage/: memory.rs
kv-7/: Cargo.toml  abi.proto
kv-7/examples/: dummy_server.rs  gen_cert.rs  service.rs  service_with_codec.rs  service_with_sled.rs
kv-7/fixtures/: ca.key  client.key
kv-7/src/: error.rs
kv-7/src/network/: mod.rs  multiplex.rs  stream.rs  tls.rs
kv-7/src/pb/: abi.rs  mod.rs
kv-7/src/service/: command_service.rs  mod.rs  topic.rs  topic_service.rs
kv-7/src/storage/: mod.rs
kv/benches/: pubsub.rs  pubsub.rs_my  pubsub.rs_ok  pubsub.rs_otlp_no
kv/examples/: client.rs  dummy_server.rs  gen_config.rs  otlp.rs
kv/fixtures/: ca.cert  ca.key  client.cert  client.conf  client.key  server.cert  server.conf  server.key
kv/src/: client.rs  config.rs  error.rs  lib.rs
kv/src/network/: frame.rs  mod.rs  multiplex.rs  stream.rs  stream_result.rs  tls.rs
kv/src/service/: mod.rs  topic.rs  topic_service.rs
kv/src/storage/: mod.rs
kv/tests/: server.rs
queryer-all/: Cargo.toml
queryer-all/queryer/: Cargo.toml
queryer-all/queryer/examples/: covid.rs  dialect.rs
queryer-all/queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
queryer-all/queryer_py/: Cargo.toml  a.py
queryer-all/queryer_py/src/: lib.rs
rgrep/: Cargo.toml
rgrep/src/: error.rs  lib.rs  main.rs
scrape_url/: Cargo.toml
scrape_url/src/: main.rs
snazzy/: Cargo.toml
thumbor/: Cargo.toml  abi.proto
thumbor/examples/: server.rs
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
xunmi-py/: 1.py  Cargo.toml  Makefile
xunmi-py/examples/: x.rs
xunmi-py/src/: lib.rs
xunmi-py/xunmi/: __init__.py
