[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
dashmap = "6.0.1"
http = "1.1.0"
prost = "0.13.1"
sled = "0.34.7"
thiserror = "1.0.63"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.86"
async-prost = "0.4.0"
futures = "0.3.30"
tempfile = "3.12.0"
tokio = { version = "1.39.3", features = ["full"] }
tracing-subscriber = "0.3.18"


[build-dependencies]
prost-build = "0.13.1"
