[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
dashmap = "6.0.1"
flate2 = "1.0.33"
http = "1.1.0"
prost = "0.13.1"
rustls-native-certs = "0.8.0"
sled = "0.34.7"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
# tokio-rustls = "0.26.0"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-rustls = "0.22.0"


[dev-dependencies]
anyhow = "1.0.86"
async-prost = "0.4.0"
certify = "0.3.0"
# certify = "0.5.2"
futures = "0.3.30"
tempfile = "3.12.0"
tokio = { version = "1.39.3", features = ["full"] }
tracing-subscriber = "0.3.18"


[build-dependencies]
prost-build = "0.13.1"
