[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
base64 = "0.22.1"
bytes = "1.7.1"
image = "0.25.2"
lazy_static = "1.5.0"
lru = "0.12.4"
percent-encoding = "2.3.1"
photon-rs = "0.3.2"
prost = "0.13.1"
reqwest = "0.12.5"
serde = { version = "1.0.205", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
tower = { version = "0.4.13", features = [
	"util",
	"timeout",
	"load-shed",
	"limit",
] }
tower-http = { version = "0.5.2", features = [
	"add-extension",
	"compression-full",
	"trace",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
prost-build = { version = "0.13.1" }
